2005-04-03  Peter Spjuth  <peter.spjuth@space.se>

	* tests/grid.test:
	* generic/tkGrid.c: Fixed bug in geometry calculations for
	widgets that span multiple columns/row.
	Bug was introduced in 8.5a1 when fixing 792387. [Bug 1175092]

2005-03-29  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tcl.m4, win/configure: do not require cygpath in macros to
	allow msys alone as an alternative.

2005-03-27  Vince Darley  <vincentdarley@users.sourceforge.net>

	* tests/textDisp.test: added test for fix of 2005-03-15.

2005-03-24  Jim Ingham  <jingham@apple.com>

	* macosx/tkMacOSXEntry.c (TkpDrawEntryBorderAndFocus): Dopey
	bug - don't reset the width for entry widgets - we didn't
	change it for them.
	
2005-03-23  Jim Ingham  <jingham@apple.com>

	These changes allow us to draw the Entry and Spinbox widget
	with a native look and feel on Mac OS X.

	* generic/tkEntry.h: New file, extracting the definitions of
	Entry and Spinbox.
	* generic/tkEntry.c (DisplayEntry): Call out to 
	TkpDrawEntryBorderAndFocus and TkpDrawSpinboxButtons.  Also 
	provide default implementations for X11 & Win.
	* macosx/tkMacOSXEntry.c: New file, implements the entry & focus
	and spinbox button drawing.
	* tkMacOSXDefaults.h: Change the Mac OS X defaults so they fit
	the native widget shapes.
	
        This is cleanup thanks to Neil Madden <nem@cs.nott.ac.uk>.
	
	* macosx/tkMacOSXWm.c (TkMacOSXWinStyle) New function.
	(TkUnsupported1ObjCmd): New function, replaces the un-objectified
	version of the command.
	* generic/tkInt.h: Swap TkUnsupported1Cmd for TkUnsupported1ObjCmd.
	* generic/tkWindow.c (): Ditto.

	This adds a "-notify" flag to "wm attributes" that will bounce the
	dock icon on Mac OS X.  This is from Revar Desmera <revarbat@gmail.com>

	* macosx/tkMacOSXWm.c (WmAttrGetNotifyStatus, WmAttrSetNotifyStatus):
	New functions.
	(WmAttributesCmd): Add the -notify.
	* doc/wm.n: Document -notify.
	
2005-03-19  Donal K. Fellows  <dkf@users.sf.net>
